--- a/bindu.tex
+++ b/bindu.tex
@@ -2310,7 +2310,7 @@ athavā dṛṣṭe\skp{r-a}\app{\lem[wit={ceteri}, alt={agre}]{\skm{r-a}gre}
   \rdg[wit={B,D,L,N1,U2}]{lakṣaṃ}
   \rdg[wit={N2}]{lakṣaṇaṃ}}
 \app{\lem[wit={ceteri}]{karttavyam}
-  \rdg[wit={P}]{\om}}/\linelabel{_157e}
+  \rdg[wit={P}]{\om}}/\linelabel{_157e}\\
 %-----------------------------
 %uktānāṃ lakṣyāṇāṃ  madhye yasya kasyāpy ekasya lakṣyakaraṇāt     valitapalitā dūre bhavanti/ \E
 %uktānāṃ lakṣaṇānāṃ madhye yasya kasyāpy ekasya lakṣyakaraṇāt     valitapalitādidūre bhavati \P
@@ -2451,7 +2451,9 @@ jihvāgreṇocca\app{\lem[wit={X}, alt={°rate}]{rate}
   \begin{translation}
     \begin{tlate}[p23_02]
 \noindent
-After having fixed the gaze on the space-element or above the space-element, due to meditation, he sees the sun without the row of thousand rays connected to the sun. Or, the mass of light situated seventeen-finger wide distance above the head shall be made the target. Or, at the uppermost part of the [previously mentioned] target, the earth element appearing in the colour of molten gold shall be made the target. Because of targeting onto any of the discussed targets, wrinkles, grey hair, etc., are removed. Diseases of the limbs are removed without medical herbs. All enemies become friends while sleeping. The lifespan increases up to 1000 years. The non-recited [sacred] scripture is uttered by the tip of the tongue. Such are the manifold results.\footnote{A variant of the practice with little differences can also be found in \citetitle{advaya} 6 (Ed. p. 4): `Now, the characteristics of the external target. If one sees a space endowed with two colours, a twinkling yellow breaking into a red which resembles the blackness of profound azure radiance, at [a distance of] four, six, eight, ten and twelve finger breadths, in that order, from the tip of a nose, he becomes a yogin. With the fluctuating gaze of one who looks at the portions of space, luminous rays manifest in front of the observer's visions. By seeing that, one becomes a yogin. [Once] he sees luminous rays appearing like molten gold at the corner of his eye or on the ground, his gaze becomes stable. For one who sees [this phenomenon] twelve finger breadths above the head, the state of immortality ensues. If the light of space is seen in the head by one who is situated anywhere, he is a yogin.' (\textit{atha bahirlakṣyalakṣaṇam} | \textit{nāsikāgre caturbhiḥ ṣaḍbhir aṣṭabhiḥ daśabhiḥ dvādaśabhiḥ kramāt aṅgulānte nīladyutiśyāmatvasadṛgraktabhaṅgīsphuratpītavarṇadvayopetaṃ vyoma yadi paśyati sa tu yogī bhavati} | \textit{caladṛṣṭyā vyomabhāgavīkṣituḥ puruṣasya dṛṣṭyagre jyotirmayūkhā vartante} | \textit{taddarśanena yogī bhavati} | \textit{taptakāñcanasaṃkāśajyotir mayūkhā apāṅgānte bhūmau vā paśyati taddṛṣṭiḥ sthirā bhavati} | \textit{śīrṣopari dvādaśāṅgulasamīkṣituḥ amṛtatvaṃ bhavati} | \textit{yatra kutra sthitasya śirasi vyomajyotir dṛṣṭaṃ cet sa tu yogī bhavati} || 6 ||)}\footnote{Also Cf. \citetitle{shivayogapradipika} 4.41cd-47ab for a description of Bāhyalakṣya closely resembling the one in \citetitle{advaya}.}\footnote{The \citetitle{hathasamketacandrikamysore} (manuscripts checked: ORI B220, GOML R3239, HSC 2244) quotes the Bāhyalakṣya passage from the \textit{Yogatattvabindu} without reference. Yet, it appears that the Sundaradeva's text is corrupted. Moreover, he selected only some of the techniques presented here, cf. \textbf{sources} on pp. \pageref{bahya}-\pageref{continuebahya}.}
+After having fixed the gaze on the space-element or above the space-element, due to meditation, he sees the sun without the row of thousand rays connected to the sun. Or, the mass of light situated seventeen-finger wide distance above the head shall be made the target. Or, at the uppermost part of the [previously mentioned] target, the earth element appearing in the colour of molten gold shall be made the target.
+
+Because of targeting onto any of the discussed targets, wrinkles, grey hair, etc., are removed. Diseases of the limbs are removed without medical herbs. All enemies become friends while sleeping. The lifespan increases up to 1000 years. The non-recited [sacred] scripture is uttered by the tip of the tongue. Such are the manifold results.\footnote{A variant of the practice with little differences can also be found in \citetitle{advaya} 6 (Ed. p. 4): `Now, the characteristics of the external target. If one sees a space endowed with two colours, a twinkling yellow breaking into a red which resembles the blackness of profound azure radiance, at [a distance of] four, six, eight, ten and twelve finger breadths, in that order, from the tip of a nose, he becomes a yogin. With the fluctuating gaze of one who looks at the portions of space, luminous rays manifest in front of the observer's visions. By seeing that, one becomes a yogin. [Once] he sees luminous rays appearing like molten gold at the corner of his eye or on the ground, his gaze becomes stable. For one who sees [this phenomenon] twelve finger breadths above the head, the state of immortality ensues. If the light of space is seen in the head by one who is situated anywhere, he is a yogin.' (\textit{atha bahirlakṣyalakṣaṇam} | \textit{nāsikāgre caturbhiḥ ṣaḍbhir aṣṭabhiḥ daśabhiḥ dvādaśabhiḥ kramāt aṅgulānte nīladyutiśyāmatvasadṛgraktabhaṅgīsphuratpītavarṇadvayopetaṃ vyoma yadi paśyati sa tu yogī bhavati} | \textit{caladṛṣṭyā vyomabhāgavīkṣituḥ puruṣasya dṛṣṭyagre jyotirmayūkhā vartante} | \textit{taddarśanena yogī bhavati} | \textit{taptakāñcanasaṃkāśajyotir mayūkhā apāṅgānte bhūmau vā paśyati taddṛṣṭiḥ sthirā bhavati} | \textit{śīrṣopari dvādaśāṅgulasamīkṣituḥ amṛtatvaṃ bhavati} | \textit{yatra kutra sthitasya śirasi vyomajyotir dṛṣṭaṃ cet sa tu yogī bhavati} || 6 ||)}\footnote{Also Cf. \citetitle{shivayogapradipika} 4.41cd-47ab for a description of Bāhyalakṣya closely resembling the one in \citetitle{advaya}.}\footnote{The \citetitle{hathasamketacandrikamysore} (manuscripts checked: ORI B220, GOML R3239, HSC 2244) quotes the Bāhyalakṣya passage from the \textit{Yogatattvabindu} without reference. Yet, it appears that the Sundaradeva's text is corrupted. Moreover, he selected only some of the techniques presented here, cf. \textbf{sources} on pp. \pageref{bahya}-\pageref{continuebahya}.}
 \flushpage
 \end{tlate}
   \end{translation}
@@ -2648,7 +2650,7 @@ vartate/
     \xmlhead[h25]{[XXIV. Antaralakṣya]}
 \begin{tlate}[p24_01]
 \noindent
-Now, the inner target is explained. Starting from the location of the root-bulb (\textit{mūlakanda})\footnote{Various concepts of the location of the \textit{kanda} exist in yogic literature. In the \citetitle{yajnavalkya} 4.16-27 (\textit{kandasthānāṃ manuṣyāṇāṃ dehamadhyān navāṅgulam} | \textit{caturaṅgulam utsedham āyāmaś ca tathāvidhaḥ} ||16||\textit{aṇḍākṛtivad ākāraṃ bhūṣitaṃ tattvagādhibhiḥ} | \textit{catuṣpadāṃ tiraścāṃ ca dvijānāṃ tundamadhyame} ||17||) one reads: `The location of the bulb (\textit{kanda}) of humans is nine finger widths from the waist. [It is] four finger widths in height and has the same [measure in] length. It appears like an egg, and [it is] ornamented with the five elements of creation and sustenance. In quadrupeds, birds and other beings, it is in the centre of the belly.' \citetitle{hathapradipika2024} 3.64cd (\textit{gulphadeśasamīpe ca kandaṃ tatra prapīḍayet}) instructs the yogin to press the \emph{kanda} with the feet in the context of \textit{uḍḍiyāṇabandha}, which could imply that the \emph{kanda} is in the genital region (except one assumes the very complex and challenging posture termed \textit{kandapīḍāsana}, cf. \citetitle{encyclopediaasana} Ed. pp. 143-144). Sundaradeva, in \citetitle{yuktabhavadeva} 7.224 and Bhavadevamiśra in \citetitle{hathacandrika} (ms. no. 2244, f. 36r) argue that the \emph{kanda} is near the navel. In \citetitle{yogacudamani} 14cd the \textit{kanda} is in between penis and navel (\textit{ūrdhvaṃ meḍhrādadho nābheḥ kande yoniḥ khagāṇḍavat}).} originating from the staff of Brahma\footnote{The term \textit{brahmadaṇḍa} in this context refers to the spinal column, which is usually identified with Mt. Meru in tantric texts, cf. \citeauthor[1988: 360]{stupa}.}, being white, extending up to the aperture of Brahma exists the single Brahma-channel\footnote{The term \textit{brahmanāḍī} is a synonym for the \textit{suṣūmnā}, cf., e.g. \citetitle{hathapradipika2024} 2.67, \citetitle{mallinson2012sataka} 47, \citetitle{yogakundalinyopanisad} 37c-38b, \citetitle{yogacintamani} (Ed. pp. 46, 112, 116, 140, 191), \citetitle{hatharatnavali} 2.8, 2.25, 2.65, 2.69.} Within the Brahma channel, having the shape of a stalk of a lotus flower [and] shining like ten million suns it goes upwards. Only one such manifestation exists. Due to meditation on this manifestation\footnote{Cf. \citetitle{bäumer2013} 35: `The central channel, which is situated within the centre of the body [is endowed] with a form resembling the stalk of a lotus. By meditation upon its empty inner space, god becomes revealed by the goddess [of the middle].' (\textit{madhyanāḍī madhyasaṃsthā bisasūtrābharūpayā | dhyātāntarvyomayā devyā tayā devaḥ prakāśate} |)}, the accomplishment of the eight supernatural powers of humans beginning with `becoming as small as the smallest particle of matter' etc.\footnote{For an extensive discussion about the yogic supernatural powers (\textit{siddhi}s), see \citeauthor{yogapowers2017} (2017).} is abtainable by the person having reached into the presence [of the manifestation].%\footnote{Some manuscripts of the \beta-group add an incomplete list of the eight \textit{siddhi}s. The passage \textit{dure vā yadi vā dure śrutvā} seems to refer to the supernatural abilities \textit{dūradarśana} and \textit{dūraśravana}. In order to display a readable passage in the edition, I conjectured accordingly. The list does not follow the standard list of eight supernatural powers. After the first four items that are usually considered as primary \textit{siddhi}s, the three manuscripts instead list three of the so-called secondary \textit{siddhi}s, cf. \citetitle{bhagavata} 11.10 and 11.15.2-6. Because of that, it is not possible to determine the missing \textit{siddhi} precisely.}
+Now, the inner target is explained. Starting from the location of the root-bulb (\textit{mūlakanda})\footnote{Various concepts of the location of the \textit{kanda} exist in yogic literature. In the \citetitle{yajnavalkya} 4.16-27 (\textit{kandasthānāṃ manuṣyāṇāṃ dehamadhyān navāṅgulam} | \textit{caturaṅgulam utsedham āyāmaś ca tathāvidhaḥ} || 16 || \textit{aṇḍākṛtivad ākāraṃ bhūṣitaṃ tattvagādhibhiḥ} | \textit{catuṣpadāṃ tiraścāṃ ca dvijānāṃ tundamadhyame} || 17 ||) one reads: `The location of the bulb (\textit{kanda}) of humans is nine finger widths from the waist. [It is] four finger widths in height and has the same [measure in] length. It appears like an egg, and [it is] ornamented with the five elements of creation and sustenance. In quadrupeds, birds and other beings, it is in the centre of the belly.' \citetitle{hathapradipika2024} 3.64cd (\textit{gulphadeśasamīpe ca kandaṃ tatra prapīḍayet}) instructs the yogin to press the \emph{kanda} with the feet in the context of \textit{uḍḍiyāṇabandha}, which could imply that the \emph{kanda} is in the genital region (except one assumes the very complex and challenging posture termed \textit{kandapīḍāsana}, cf. \citetitle{encyclopediaasana} Ed. pp. 143-144). Sundaradeva, in \citetitle{yuktabhavadeva} 7.224 and Bhavadevamiśra in \citetitle{hathacandrika} (ms. no. 2244, f. 36r) argue that the \emph{kanda} is near the navel. In \citetitle{yogacudamani} 14cd the \textit{kanda} is in between penis and navel (\textit{ūrdhvaṃ meḍhrādadho nābheḥ kande yoniḥ khagāṇḍavat}).} originating from the staff of Brahma\footnote{The term \textit{brahmadaṇḍa} in this context refers to the spinal column, which is usually identified with Mt. Meru in tantric texts, cf. \citeauthor[1988: 360]{stupa}.}, being white, extending up to the aperture of Brahma exists the single Brahma-channel\footnote{The term \textit{brahmanāḍī} is a synonym for the \textit{suṣūmnā}, cf., e.g. \citetitle{hathapradipika2024} 2.67, \citetitle{mallinson2012sataka} 47, \citetitle{yogakundalinyopanisad} 37c-38b, \citetitle{yogacintamani} (Ed. pp. 46, 112, 116, 140, 191), \citetitle{hatharatnavali} 2.8, 2.25, 2.65, 2.69.} Within the Brahma channel, having the shape of a stalk of a lotus flower [and] shining like ten million suns it goes upwards. Only one such manifestation exists. Due to meditation on this manifestation\footnote{Cf. \citetitle{bäumer2013} 35: `The central channel, which is situated within the centre of the body [is endowed] with a form resembling the stalk of a lotus. By meditation upon its empty inner space, god becomes revealed by the goddess [of the middle].' (\textit{madhyanāḍī madhyasaṃsthā bisasūtrābharūpayā} | \textit{dhyātāntarvyomayā devyā tayā devaḥ prakāśate} |)}, the accomplishment of the eight supernatural powers of humans beginning with `becoming as small as the smallest particle of matter' etc.\footnote{For an extensive discussion about the yogic supernatural powers (\textit{siddhi}s), see \citeauthor{yogapowers2017} (2017).} is abtainable by the person having reached into the presence [of the manifestation].%\footnote{Some manuscripts of the \beta-group add an incomplete list of the eight \textit{siddhi}s. The passage \textit{dure vā yadi vā dure śrutvā} seems to refer to the supernatural abilities \textit{dūradarśana} and \textit{dūraśravana}. In order to display a readable passage in the edition, I conjectured accordingly. The list does not follow the standard list of eight supernatural powers. After the first four items that are usually considered as primary \textit{siddhi}s, the three manuscripts instead list three of the so-called secondary \textit{siddhi}s, cf. \citetitle{bhagavata} 11.10 and 11.15.2-6. Because of that, it is not possible to determine the missing \textit{siddhi} precisely.}
 \flushpage
     \end{tlate}
   \end{translation}
