--- a/intro.tex
+++ b/intro.tex
@@ -556,13 +556,22 @@ Caryāyoga is to cultivate kindness towards those in fortunate circumstances to 
 
 \subsection{Carcāyoga in the \textit{Sarvāṅgayogapradīpikā}}
 
-Within \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98), Sundardās describes Cārcāyoga as a type of Bhaktiyoga which is \textit{bhakti} towards unmanifest consciousness (\textit{avyakta puruṣa}) in delightful devotion. \footnote{See \citeauthor{burger2014sarvangayogapradipika} (2014: 694-695) for an earlier brief discussion of Sundardās's Carcāyoga in French}. He extensively describes the unmanifest consciousness (\textit{avyakta puruṣa}) as being formless and eternal and so on (40), as beginningless and endless, and so on (41). Next, Sundardās describes the various layers of creation emanating from \textit{oṃ} (42-45). He says the unmanifest consciousness illuminates every corner of existence (46), being the inner knower of all (47). Then, Sundardās expresses the importance of deep awe towards the infinite, divine, all-knowing and incomprehensible (48-49) unmanifest consciousness.
+Within \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98), Sundardās describes Cārcāyoga as one of the three subtypes of Bhaktiyoga which is \textit{bhakti} towards unmanifest consciousness (\textit{avyakta puruṣa}) in delightful devotion. \footnote{See \citeauthor{burger2014sarvangayogapradipika} (2014: 694-695) for an earlier brief discussion of Sundardās's Carcāyoga in French}. He extensively describes the unmanifest consciousness (\textit{avyakta puruṣa}) as being formless and eternal and so on (40), as beginningless and endless, and so on (41). Next, Sundardās describes the various layers of creation emanating from \textit{oṃ} (42-45). He says the unmanifest consciousness illuminates every corner of existence (46), being the inner knower of all (47). Then, Sundardās expresses the importance of deep awe towards the infinite, divine, all-knowing and incomprehensible (48-49) unmanifest consciousness.
 
-The entire passage on Carcāyoga is characterised by a discussion and description of the unmanifest consciousness (\textit{avyakta puruṣa}). This aspect is the core of this type of Yoga. Unlimited unmanifested consciousness can be put into limiting words only, and yet the practitioner is confronted with the question of how it is supposed to be defined and determined.\footnote{Cf. \citetitle{sarvangayoga} 2.41ab (\textit{avyakta puruṣa agama apārā} \textit{kaisaiṃ kai kariye nirddhārā} |} And this is precisely the practice of Carcāyoga. The term \textit{carcā°} here refers to discussing, putting into words, and emphasising individual details of unmanifest consciousness to generate deep reverence for the cultivation of Bhaktiyoga, the Yoga of devotional worship of \textit{avyakta puruṣa}. The following verse illustrates this:
+The entire passage on Carcāyoga is characterised by a discussion and description of the unmanifest consciousness (\textit{avyakta puruṣa}). This aspect is the core of this type of Yoga. Unlimited unmanifested consciousness can be put into limiting words only, and yet the practitioner is confronted with the question of how it is supposed to be defined and determined.\footnote{Cf. \citetitle{sarvangayoga} 2.41ab (\textit{avyakta puruṣa agama apārā} \textit{kaisaiṃ kai kariye nirddhārā} |} And this is precisely the practice of Carcāyoga. The term \textit{carcā°} here refers to `discussing' or `putting into words' and emphasising individual details of unmanifest consciousness to generate deep reverence for the cultivation of Bhaktiyoga, the Yoga of devotional worship of \textit{avyakta puruṣa}. The following verse illustrates this:
 \begin{quote}
 How to discuss, where to find you, O Lord? You are the inner knower of everything. There is no end to describing creation. Your limit cannot be reached by any means.\footnote{Cf. \citetitle{sarvangayoga} 2.47 (\textit{carcā karaiṃ kahāṃ laga svamī} | \textit{tum saba hī ke antarjāmī} | \textit{sṛṣṭi kahat kachu anta na āvai} | \textit{terā pāra kaiṃna dhaiṃ pāvai} || 47 ||} \end{quote}
 
 Thus, it is clear that no direct conceptual connection exists between the Caryāyogas described above and Carcāyoga. A meaningful explanation for the conspicuous homophony of both terms cannot be offered for the time being.  
+
+\section{3. Haṭhayoga}
+\label{hathayogaintro}
+
+Haṭhayoga taucht ausnahmslos in allen komplexen spätmittelalterlichen Yogataxonomien auf. In den Taxonomien mit fünfzehn Yogas der \textit{Yogatattvabindu}, dem \textit{Yogasvarodaya} und der \textit{Yogasiddhāntacandrikā} nimmt es jeweils die vierte Position ein. In der zwölffachen Taxonomie von Sundardās \textit{Sarvāṅgayogapradīpikā} steht es an der fünften Position und ist somit neben einer eigenen Kategorie gleichzeitig auch die Oberkategorie für die drei nächsten Yogas die von Sundardās beschrieben werden, nämlich Rāja-, Lakṣa- und Aṣṭāṅgayoga.
+
+\subsection{Haṭhayoga in the \textit{Yogatattvabindu}}
+
+Haṭhayoga wird im \textit{Yogatattvabindu} in Sektion \uproman{19}-\uproman{20} beschrieben. 
 
 \end{document}
 
